--- a/mcq.ipynb
+++ b/mcq.ipynb
@@ -9,12 +9,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "aksih\n"
+      "akish\n"
      ]
     }
    ],
    "source": [
-    "print(\"aksih\")"
+    "print(\"akish\")"
    ]
   },
   {
